# QML_VTK_minimal_app

./: .gitignore  CMakeLists.txt  QVTKFrameBufferObjectItem.cpp  QVTKFrameBufferObjectItem.h  README.md  main.cpp  main.qml
